# worldCup2022

./: CMakeLists.txt  Conditionals.h  Exception.h  HashTable.cpp  HashTable.h  NewTree.h  Player.cpp  Player.h  PlayerStack.h  Team.cpp  Team.h  main23a2.cpp  test.in  worldcup23a2.cpp  worldcup23a2.h
